--- a/learning-log-project/learning_logs/templates/learning_logs/base.html
+++ b/learning-log-project/learning_logs/templates/learning_logs/base.html
@@ -1,6 +1,7 @@
 <p>
   <!-- learning_logs is the namespace and index is a uniquely named URL pattern in that namespace. -->
-  <a href="{% url 'learning_logs:index' %}">Learning Log</a>
+  <a href="{% url 'learning_logs:index' %}">Learning Log</a> -
+  <a href="{% url 'learning_logs:topics' %}">Topics</a>
 </p>
 
 {% block content %}{% endblock content %}
