--- a/learning-log-project/learning_logs/templates/learning_logs/base.html
+++ b/learning-log-project/learning_logs/templates/learning_logs/base.html
@@ -1,7 +1,14 @@
 <p>
   <!-- learning_logs is the namespace and index is a uniquely named URL pattern in that namespace. -->
   <a href="{% url 'learning_logs:index' %}">Learning Log</a> -
-  <a href="{% url 'learning_logs:topics' %}">Topics</a>
+  <a href="{% url 'learning_logs:topics' %}">Topics</a> -
+  {% if user.is_authenticated %}
+    Hello, {{ user.username }}.
+    <a href="{% url 'users:logout' %}">Log out</a>
+  {% else %}
+    <a href="{% url 'users:register' %}">Register</a> -
+    <a href="{% url 'users:login' %}">Log in</a>
+  {% endif %}
 </p>
 
 {% block content %}{% endblock content %}
