--- a/learning-log-project/users/templates/registration/login.html
+++ b/learning-log-project/users/templates/registration/login.html
@@ -1,21 +1,19 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap4 %}
+
+{% block page_header %}
+  <h2>Log in to your account.</h2>
+{% endblock page_header %}
 
 {% block content %}
+  <form method="post" action="{% url 'users:login' %}" class="form">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    {% buttons %}
+    <button name="submit" class="btn btn-primary">Log in</button>
+    {% endbuttons %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-<!-- since we include('django.contrib.auth.urls') in urlpatterns, login is the default name provided by Django -->
-<form method="post" action="{% url 'users:login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-
-  <button name="submit">Log in</button>
-
-  <!--  hidden form element, 'next'; the value argument tells Django where to redirect the user after they’ve logged in successfully. In this case, we send the user back to the home page.  -->
-  <input type="hidden" name="next"
-         value="{% url 'learning_logs:index' %}" />
-</form>
-
+    <input type="hidden" name="next"
+           value="{% url 'learning_logs:index' %}" />
+  </form>
 {% endblock content %}
